--- a/lab2.html
+++ b/lab2.html
@@ -1,33 +1,11 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Lon Hosford Basic Animation in Create JS</title>
-<script>
-function init()
-{
-alert("Hello World!");
-}
-</script>
-<style>
-body {
-margin: 0 ;
-padding: 15px;
-background-color: #ccc;
-}
-canvas {
-border: solid 2px #000;
-background-color: #fff;
-display: block;
-margin: 0px auto 0px auto;
-padding-left: 0;
-padding-right: 0;
-}
-</style>
+   
+    <title>Quizlet</title>
+    <script src="lab2.js"></script>
 </head>
-<body onLoad="init();">
-<canvas id="stage-canvas" width="550" height="400">
-This web browser does not support canvas.
-</canvas>
+<body>
+    
 </body>
 </html>
