--- a/lab2.html
+++ b/lab2.html
@@ -6,6 +6,6 @@
     <script src="lab2.js"></script>
 </head>
 <body>
-    
+    <button onclick="console.log('Button was clicked');" >  </button>
 </body>
 </html>
