--- a/INDEX4.HTML
+++ b/INDEX4.HTML
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
 <title>Lon Hosford Basic CreateJS Shape Animation</title>
-
 <script>
 var stage, sunShape;
 function init()
@@ -12,12 +11,17 @@ function init()
 stage = new createjs.Stage("stage-canvas");
 sunShape = new createjs.Shape();
 sunShape.graphics.beginFill("#F00");
-sunShape.graphics.drawCircle(0, 0, 25);
+sunShape.graphics.drawCircle(10, 10, 25);
 sunShape.graphics.endFill();
 sunShape.x = 25;
 sunShape.y = 25;
-createjs.Tween.get(sunShape, {loop:true})
 stage.addChild(sunShape);
+createjs.Tween.get(sunShape, {loop:true})
+.to({x:500, y:50,} , 3000);
+createjs.Ticker.addEventListener("tick", tickHandler);
+}
+function tickHandler(e)
+{
 stage.update();
 }
 </script>
@@ -43,4 +47,3 @@ This web browser does not support canvas.
 </canvas>
 </body>
 </html>
-
